# smart-home-energy-optimizer

./: .dockerignore  .gitignore  Dockerfile  README.md  README_HF.md  __init__.py  app.py  appliances.py  check_environment.py  environment.py  graders.py  inference.py  models.py  openenv.yaml  pricing.py  pyproject.toml  requirements.txt  server.py  solar.py  test_all_tasks.py  test_basic.py  test_local_server.py
server/: app.py
